--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <meta property="og:title" content="Detailed-kitchen-design-drawing.pdf">
+        <meta property="og:title" content="Furniture needed to buy for new house.pdf">
         <title></title>
     </head>
     <body>
